images  e section images add

--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
       </section>
     </main>
 
+
+    <!--SECTION IMAGES-->
+
+
+    <section class="photo-grid">
+      <img src="./images/grid01.jpg" alt="image 01" class="photo-grid__image">
+      <img src="./images/grid02.jpg" alt="image 02" class="photo-grid__image">
+      <img src="./images/grid03.jpg" alt="image 03" class="photo-grid__image">
+      <img src="./images/grid04.jpg" alt="image 04" class="photo-grid__image">
+      <img src="./images/grid05.jpg" alt="image 05" class="photo-grid__image">
+      <img src="./images/grid06.jpg" alt="image 06" class="photo-grid__image">
+      <img src="./images/grid07.jpg" alt="image 07" class="photo-grid__image">
+      <img src="./images/grid08.jpg" alt="image 08" class="photo-grid__image">
+
+    </section>
+
+    
     <footer class="footer">
          <p class="footer__content">© 2024. Edney Muniz</p>
     </footer>
@@ -70,4 +87,3 @@
 
 
 
-<!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN--><!--MAIN-->
