--- a/index.html
+++ b/index.html
@@ -73,7 +73,146 @@
 
     </section>
 
+
     
+
+  </div>
+
+  <div class="places__card-content">
+    <p class="places__card-text">A ruína medieval do Castelo de Criccieth tem vista para a cidade abaixo de uma rocha que se projeta para o
+      mar.
+      Acredita-se que tenha sido construído por Llewelyn, o Grande, no século XIII. Cerca de 900 anos depois, a
+      auto-intitulada *Pérola de Gales nas margens de Snowdonia* tornou-se um destino turístico popular durante os
+      meses de verão.</p>
+
+    <p class="places__card-text">
+        A uma curta caminhada da estrada do castelo, você pode desfrutar do melhor sorvete do mundo no Cadwalader's,
+        cujo ingrediente secreto, segundo rumores, são algas marinhas de origem local. Outra reivindicação à fama é
+        o
+        fato de que Criccieth ganhou o prêmio *Wales in Bloom* por cinco anos consecutivos por suas espetaculares
+        exibições florais pela cidade. Foi também a casa de David Lloyd George, o único galês a ocupar o cargo de
+        primeiro-ministro do Reino Unido.
+     </p>
+
+     <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+     class="places__card-button">Compre esta obra de arte como NFT</a>
+
+  </div>
+
+<!--SECTION BEREA-->
+
+
+  <div class="places__card">
+      <h2 class="places__card-title">Berea, EUA</h2>
+      <div class="places__card-artists">
+        <p class="places__card-artists-title">Artista</p>
+        <p class="places__card-artists-names">Travis Turner, autor e editor</p>
+      </div>
+      <div class="places__card-image-container">
+        <img src="./images/borea.jpg" alt="Borea" class="places__card-image">
+      </div>
+      <div class="places__card-content">
+        <p class="places__card-text">
+          Berea é uma pequena cidade localizada na parte central do Kentucky. A cidade é cercada por belas florestas e
+          campos. É conhecida como a capital do artesanato do estado, e os visitantes encontrarão muitas oportunidades
+          de compras: lojas com bijuterias artesanais, velas, artigos de madeira, galerias, ateliês de vidro e muito
+          mais. A cidade realiza um festival anual que celebra o "pão de colher", um prato local feito com pão de
+          milho e servido com uma colher de pau.
+        </p>
+        <p class="places__card-text">
+          No entanto, provavelmente é mais conhecido pela faculdade local. O Berea College foi fundado em 1855 e foi o
+          primeiro colégio no sul a ser racialmente integrado, bem como o primeiro a ser misto. De forma um tanto
+          singular, não cobra mensalidades - todo aluno recebe uma bolsa de estudos integral.
+        </p>
+      </div>
+      <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+        class="places__card-button">
+        Compre esta obra de arte como NFT
+      </a>
+  </div>
+
+<!--MURAMVYA CARD-->
+
+
+<div class="places__card">
+  <h2 class="places__card-title">Muramvya, Burundi</h2>
+  <div class="places__card-artists">
+    <p class="places__card-artists-title">Artista</p>
+    <p class="places__card-artists-names">Grevisse Kenguruka, editor técnico</p>
+  </div>
+  <div class="places__card-image-container">
+    <img src="./images/muramvya.jpg" alt="Muramvya" class="places__card-image">
+  </div>
+  <div class="places__card-content">
+    <p class="places__card-text">
+      Muramvya é uma das 18 províncias de Burundi. Na era do reino, Muramvya era a capital real e em 2007, por
+      causa de sua paisagem cultural e natural, foi adicionada à Lista Provisória do Patrimônio Mundial da UNESCO.
+      Está localizada no centro de Burundi, entre as capitais políticas e econômicas do país.
+    </p>
+    <p class="places__card-text">
+      O clima é bastante frio à noite, mas durante o dia, você pensaria que está no céu. A 2.665 metros (8.743
+      pés) acima do nível do mar, o Monte Teza é um dos lugares mais frios da província. Mas essa brisa fresca
+      permite uma das maiores plantações de chá e café do país, que representam a maior parte das exportações do
+      Burundi.
+    </p>
+    <p class="places__card-text">
+      O Parque Nacional de Kibira, uma das maiores reservas de vida selvagem para macacos, se sobrepõe a quatro
+      províncias, incluindo Muramvya. Este Parque Nacional encontra-se no ápice das belas montanhas do Congo-Nile
+      Divide, variando entre 1.550 e 2.660 metros de altitude. Está repleta de uma bela vegetação e fonte para os
+      vários rios e riachos que fornecem água em todo o país.
+    </p>
+  </div>
+  <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+    class="places__card-button">
+    Compre esta obra de arte como NFT
+  </a>
+</div>
+
+<!--SECTION SAO PAULO-->
+<div class="places__card">
+  <h2 class="places__card-title">São Paulo, Brasil</h2>
+  <div class="places__card-artists">
+    <p class="places__card-artists-title">Artista</p>
+    <p class="places__card-artists-names">Edney Muniz</p>
+  </div>
+  <div class="places__card-image-container">
+    <img src="./images/sao-paulo.jpeg" alt="São Paulo" class="places__card-image">
+  </div>
+  <div class="places__card-content">
+    <p class="places__card-text">
+      São Paulo, a maior metrópole do Brasil, é uma cidade vibrante e multifacetada. Com uma população
+      diversificada de mais de 12 milhões de habitantes, a cidade é um verdadeiro mosaico cultural, abrigando
+      pessoas de diferentes origens e etnias. Essa diversidade se reflete em seus bairros, onde é possível encontrar
+      uma vasta gama de influências culturais, desde a japonesa na Liberdade até a italiana no Bixiga. São Paulo
+      também é o centro econômico do país, com um setor financeiro robusto e diversas oportunidades de negócios,
+      atraindo investidores de todo o mundo.
+    </p>
+    <p class="places__card-text">
+      A cidade se destaca por sua rica vida cultural e artística, oferecendo uma infinidade de opções para os amantes
+      das artes. São Paulo abriga alguns dos principais museus do país, como o MASP e o Museu da Língua Portuguesa,
+      além de teatros icônicos, como o Theatro Municipal. A cidade é também um polo gastronômico, com restaurantes
+      premiados internacionalmente que oferecem uma culinária diversificada e inovadora. Além disso, a vida noturna
+      paulistana é uma das mais agitadas do mundo, com bares, clubes e eventos que atraem tanto moradores quanto
+      turistas.
+    </p>
+    <p class="places__card-text">
+      A economia de São Paulo é outro aspecto positivo, sendo o coração financeiro do Brasil. A cidade abriga a maior
+      bolsa de valores da América Latina, a B3, e é sede de grandes empresas nacionais e multinacionais. Essa força
+      econômica gera inúmeras oportunidades de emprego e negócios, atraindo profissionais de diversas áreas. Além disso,
+      São Paulo possui uma infraestrutura robusta, com centros de convenções, aeroportos e uma rede de transporte
+      público em constante expansão, facilitando a mobilidade e o desenvolvimento de novos empreendimentos.
+    </p>
+
+    <a href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+    class="places__card-button">Compre esta obra de arte como NFT</a>
+
+  </div>
+
+
+
+</section>
+
+
     <footer class="footer">
          <p class="footer__content">© 2024. Edney Muniz</p>
     </footer>
