correcao  da class conheca, add stilo body para manter as cores laterais e defini um a largura maxima p page,places__card-artists-title coloquei uma margin de 8px e arrumei  o texto ARTIsta de minusculo p maiusculo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="html, css, figma, tripleten">
 </head>
 
-<body>
+<body class="body">
   <div class="page">
 
     <!--HEADER-->
@@ -39,13 +39,13 @@
     <!--MAIN-->
 
     <main class="content">
-      <section class="conheca">
+      <section class="introduction">
         <div>
-          <h2 class="conheca__title">Conheça um pouco mais sobre a localização dos seus amigos</h2>
-          <p class="conheca__quote">Cada pessoa é um artista livre, chamado a transformar as condições,
+          <h2 class="introduction__title">Conheça um pouco mais sobre a localização dos seus amigos</h2>
+          <p class="introduction__quote">Cada pessoa é um artista livre, chamado a transformar as condições,
             pensamentos e estruturas que moldam nossas vidas.</p>
-          <p class="conheca__quote-author">— Joseph Beuys</p>
-          <p class="conheca__text">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo.
+          <p class="introduction__quote-author">— Joseph Beuys</p>
+          <p class="introduction__text">A cidade de TripleTen reuniu profissionais de diversos cantos do mundo.
             Hoje, a Galeria de Arte TripleTen tem o orgulho de apresentar histórias e fotos de algumas das
             pessoas que dedicam seu tempo e esforço para fazer com que os futuros profissionais de
             tecnologia desta cidade se sintam em casa. Cada um de nós tem uma história única sobre o lugar
@@ -84,7 +84,7 @@
       <div class="places__card">
         <h2 class="places__card-title">Criccieth, País de Gales</h2>
         <div class="places__card-artists">
-          <p class="places__card-artists-title">Artistas</p>
+          <p class="places__card-artists-title">ARTISTA</p>
           <p class="places__card-artists-names">Steffan Warren, editor-chefe</p>
           <p class="places__card-artists-names">Kseniya Glagoleva, gerente de projeto</p>
         </div>
@@ -124,7 +124,7 @@
   <div class="places__card">
       <h2 class="places__card-title">Berea, EUA</h2>
       <div class="places__card-artists">
-        <p class="places__card-artists-title">Artista</p>
+        <p class="places__card-artists-title">ARTISTA</p>
         <p class="places__card-artists-names">Travis Turner, autor e editor</p>
       </div>
       <div class="places__card-image-container">
@@ -156,7 +156,7 @@
  <div class="places__card">
   <h2 class="places__card-title">Muramvya, Burundi</h2>
   <div class="places__card-artists">
-    <p class="places__card-artists-title">Artista</p>
+    <p class="places__card-artists-title">ARTISTA</p>
     <p class="places__card-artists-names">Grevisse Kenguruka, editor técnico</p>
   </div>
   <div class="places__card-image-container">
@@ -191,7 +191,7 @@
  <div class="places__card">
   <h2 class="places__card-title">São Paulo, Brasil</h2>
   <div class="places__card-artists">
-    <p class="places__card-artists-title">Artista</p>
+    <p class="places__card-artists-title">ARTISTA</p>
     <p class="places__card-artists-names">Edney Muniz</p>
   </div>
   <div class="places__card-image-container">
